# ChangeLog for media-sound/alsa-headers
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.79 2006/05/14 03:21:58 metalgod Exp $

  14 May 2006; Luis Medinas <metalgod@gentoo.org>
  alsa-headers-1.0.11.ebuild:
  Stable on amd64. Bug #130535.

  01 May 2006; Joseph Jezak <josejx@gentoo.org> alsa-headers-1.0.11.ebuild:
  Marked ppc stable for bug #130535.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  24 Apr 2006; Jason Wever <weeve@gentoo.org> alsa-headers-1.0.11.ebuild:
  Stable on SPARC wrt bug #130535.

  24 Apr 2006; Aron Griffis <agriffis@gentoo.org>
  alsa-headers-1.0.11.ebuild:
  Mark 1.0.11 stable on ia64

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -alsa-headers-1.0.8.ebuild, alsa-headers-1.0.10.ebuild,
  alsa-headers-1.0.11.ebuild:
  Drop old version and don't take alsa-driver's FILESDIR path.

  22 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  alsa-headers-1.0.11.ebuild:
  Stable on x86 wrt bug #130535.

  22 Apr 2006; Markus Rothe <corsair@gentoo.org> alsa-headers-1.0.11.ebuild:
  Stable on ppc64; bug #130535

  19 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -alsa-headers-1.0.11_rc3.ebuild, -alsa-headers-1.0.11_rc4.ebuild,
  -alsa-headers-1.0.11_rc5.ebuild:
  Drop release candidate versions.

*alsa-headers-1.0.11 (19 Apr 2006)

  19 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-headers-1.0.11.ebuild:
  Version bump. This version will replace all the old release candidates.

*alsa-headers-1.0.11_rc5 (11 Apr 2006)

  11 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-headers-1.0.11_rc5.ebuild:
  Version bump.

  24 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-headers-1.0.11_rc4.ebuild:
  Version bump, thanks to David Watzke in bug #127412.

*alsa-headers-1.0.11_rc4 (24 Mar 2006)

  24 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-headers-1.0.11_rc4.ebuild: