@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.149 2006/05/14 03:26:16 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.150 2006/05/29 18:53:27 gmsoft Exp $
+
+  29 May 2006; Guy Martin <gmsoft@gentoo.org> alsa-utils-1.0.11.ebuild:
+  Stable on hppa.
 
   14 May 2006; Luis Medinas <metalgod@gentoo.org> alsa-utils-1.0.11.ebuild:
   Stable on amd64. Bug #130535.
