@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/alsa-headers
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.79 2006/05/14 03:21:58 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.80 2006/05/29 18:50:32 gmsoft Exp $
+
+  29 May 2006; Guy Martin <gmsoft@gentoo.org> alsa-headers-1.0.11.ebuild:
+  Stable on hppa.
 
   14 May 2006; Luis Medinas <metalgod@gentoo.org>
   alsa-headers-1.0.11.ebuild:
